--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ __Previews/ReboostV2_USB.SchDocPreview
 __Previews/ReboostV2__Isense.SchDocPreview
 *.SchDocPreview
 *.SchDocPreview
+History/Project Outputs for Reboostv2/NC Drill/ReboostV2.~(1).LDP.Zip
+History/Reboostv2.~(4).PrjPcb.Zip
